--- a/index.html.html
+++ b/index.html.html
@@ -3,17 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Your AI Consultancy | AI Strategy & Automation</title>
-<meta name="description" content="AI Strategy, Automation, and Custom AI Solutions for Businesses. Transform your company with intelligent systems.">
+<title>EMIRG AI | Strategic AI Consulting</title>
+<meta name="description" content="EMIRG AI delivers executive-level AI strategy in Operational Mapping, Forecasting & Demand Planning, and Intelligent Autonomy.">
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
 :root {
-    --primary: #6C63FF;
-    --dark: #0f172a;
-    --light: #f8fafc;
-    --gray: #94a3b8;
+    --black: #0a0a0a;
+    --gold: #C6A75E;
+    --dark-gray: #1a1a1a;
+    --light-gray: #aaaaaa;
+    --white: #ffffff;
 }
 
 * {
@@ -24,9 +25,9 @@
 }
 
 body {
-    background: var(--dark);
-    color: white;
-    line-height: 1.6;
+    background-color: var(--black);
+    color: var(--white);
+    line-height: 1.7;
 }
 
 .container {
@@ -36,13 +37,13 @@ body {
 }
 
 header {
-    padding: 20px 0;
     position: fixed;
     width: 100%;
-    top: 0;
-    background: rgba(15, 23, 42, 0.95);
-    backdrop-filter: blur(8px);
+    background: rgba(10,10,10,0.95);
+    backdrop-filter: blur(6px);
+    padding: 20px 0;
     z-index: 1000;
+    border-bottom: 1px solid rgba(198,167,94,0.2);
 }
 
 nav {
@@ -51,9 +52,12 @@ nav {
     align-items: center;
 }
 
-nav h1 {
-    font-size: 1.5rem;
-    font-weight: 700;
+.logo {
+    font-family: 'Playfair Display', serif;
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: var(--gold);
+    letter-spacing: 1px;
 }
 
 nav ul {
@@ -62,126 +66,130 @@ nav ul {
 }
 
 nav ul li {
-    margin-left: 25px;
+    margin-left: 30px;
 }
 
 nav a {
-    color: white;
     text-decoration: none;
+    color: var(--white);
     font-weight: 500;
+    transition: 0.3s;
 }
 
 nav a:hover {
-    color: var(--primary);
+    color: var(--gold);
 }
 
 .hero {
     height: 100vh;
     display: flex;
     align-items: center;
-    text-align: center;
-    padding-top: 80px;
+    padding-top: 100px;
 }
 
-.hero h2 {
-    font-size: 2.8rem;
+.hero-content {
+    max-width: 750px;
+}
+
+.hero h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 3.2rem;
     margin-bottom: 20px;
 }
 
 .hero p {
-    color: var(--gray);
-    max-width: 600px;
-    margin: auto;
-    margin-bottom: 30px;
+    font-size: 1.1rem;
+    color: var(--light-gray);
+    margin-bottom: 40px;
 }
 
-.btn {
-    padding: 14px 28px;
-    background: var(--primary);
-    border: none;
-    color: white;
-    font-weight: 600;
-    border-radius: 6px;
-    cursor: pointer;
+.cta-btn {
+    display: inline-block;
+    padding: 16px 36px;
+    border: 2px solid var(--gold);
+    color: var(--gold);
     text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
     transition: 0.3s ease;
 }
 
-.btn:hover {
-    opacity: 0.85;
+.cta-btn:hover {
+    background: var(--gold);
+    color: var(--black);
 }
 
 section {
-    padding: 100px 0;
+    padding: 120px 0;
 }
 
 .section-title {
-    text-align: center;
+    font-family: 'Playfair Display', serif;
+    font-size: 2.3rem;
     margin-bottom: 60px;
 }
 
-.services {
+.solutions-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 30px;
+    gap: 50px;
 }
 
-.card {
-    background: #1e293b;
-    padding: 30px;
-    border-radius: 10px;
-    transition: 0.3s ease;
+.solution-card {
+    border-top: 2px solid var(--gold);
+    padding-top: 25px;
 }
 
-.card:hover {
-    transform: translateY(-5px);
-}
-
-.card h3 {
+.solution-card h3 {
+    font-size: 1.4rem;
     margin-bottom: 15px;
 }
 
-.card p {
-    color: var(--gray);
+.solution-card p {
+    color: var(--light-gray);
 }
 
-.about p {
-    max-width: 700px;
-    margin: auto;
-    color: var(--gray);
+.divider {
+    height: 1px;
+    background: rgba(198,167,94,0.2);
+    margin: 100px 0;
+}
+
+.contact {
     text-align: center;
 }
 
-.contact form {
+.contact p {
     max-width: 600px;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-}
-
-.contact input, .contact textarea {
-    padding: 15px;
-    margin-bottom: 15px;
-    border-radius: 6px;
-    border: none;
-    background: #1e293b;
-    color: white;
-}
-
-.contact button {
-    border: none;
+    margin: 0 auto 40px;
+    color: var(--light-gray);
 }
 
 footer {
-    background: #020617;
+    padding: 40px 0;
+    border-top: 1px solid rgba(198,167,94,0.2);
     text-align: center;
-    padding: 30px 0;
-    color: var(--gray);
+    color: var(--light-gray);
 }
 
+/* Mobile Optimization */
 @media (max-width: 768px) {
-    .hero h2 {
-        font-size: 2rem;
+
+    nav ul {
+        display: none;
+    }
+
+    .hero {
+        height: auto;
+        padding: 160px 0 100px;
+    }
+
+    .hero h1 {
+        font-size: 2.2rem;
+    }
+
+    .section-title {
+        font-size: 1.8rem;
     }
 }
 </style>
@@ -192,11 +200,10 @@ footer {
 <header>
 <div class="container">
 <nav>
-<h1>YourAI</h1>
+<div class="logo">EMIRG AI</div>
 <ul>
-<li><a href="#services">Services</a></li>
-<li><a href="#about">About</a></li>
-<li><a href="#contact">Contact</a></li>
+<li><a href="#solutions">Solutions</a></li>
+<li><a href="#contact">Engage</a></li>
 </ul>
 </nav>
 </div>
@@ -204,59 +211,59 @@ footer {
 
 <section class="hero">
 <div class="container">
-<h2>Transform Your Business With Artificial Intelligence</h2>
-<p>We help companies implement AI strategy, automation, and custom machine learning solutions that drive growth and efficiency.</p>
-<a href="#contact" class="btn">Book a Free Consultation</a>
-</div>
-</section>
-
-<section id="services">
-<div class="container">
-<div class="section-title">
-<h2>Our Services</h2>
-</div>
-<div class="services">
-<div class="card">
-<h3>AI Strategy Consulting</h3>
-<p>Identify high-impact AI opportunities and build a roadmap tailored to your business goals.</p>
-</div>
-<div class="card">
-<h3>Process Automation</h3>
-<p>Streamline operations with intelligent automation systems that reduce costs and save time.</p>
-</div>
-<div class="card">
-<h3>Custom AI Solutions</h3>
-<p>Deploy machine learning models and AI tools built specifically for your workflows.</p>
-</div>
+<div class="hero-content">
+<h1>Strategic Artificial Intelligence for Operational Excellence</h1>
+<p>EMIRG AI partners with executive teams to architect intelligent systems that transform operational visibility, demand precision, and autonomous execution.</p>
+<a href="mailto:logistics@emirg-group.com?subject=Executive%20Consultation%20Request%20-%20EMIRG%20AI" class="cta-btn">
+Schedule an Executive Consultation →
+</a>
 </div>
 </div>
 </section>
 
-<section id="about" class="about">
+<section id="solutions">
 <div class="container">
-<div class="section-title">
-<h2>About Us</h2>
+<h2 class="section-title">Core Advisory Solutions</h2>
+
+<div class="solutions-grid">
+
+<div class="solution-card">
+<h3>Operational Mapping</h3>
+<p>Comprehensive AI-driven process mapping to uncover inefficiencies, optimize resource allocation, and create transparent operational intelligence frameworks.</p>
 </div>
-<p>We are a forward-thinking AI consultancy focused on delivering measurable business outcomes. Our team combines deep technical expertise with strategic insight to help organizations unlock the full power of artificial intelligence.</p>
+
+<div class="solution-card">
+<h3>Forecasting & Demand Planning</h3>
+<p>Advanced predictive modeling systems enabling accurate demand forecasting, inventory precision, and executive-level planning confidence.</p>
+</div>
+
+<div class="solution-card">
+<h3>Intelligent Autonomy</h3>
+<p>Design and deployment of autonomous decision systems that enhance speed, reduce friction, and empower scalable operational independence.</p>
+</div>
+
+</div>
 </div>
 </section>
+
+<div class="divider"></div>
 
 <section id="contact" class="contact">
 <div class="container">
-<div class="section-title">
-<h2>Contact Us</h2>
-</div>
-<form>
-<input type="text" placeholder="Your Name" required>
-<input type="email" placeholder="Your Email" required>
-<textarea rows="5" placeholder="How can we help?" required></textarea>
-<button class="btn">Send Message</button>
-</form>
+<h2 class="section-title">Engage With EMIRG AI</h2>
+<p>We work with leadership teams ready to integrate AI as a strategic asset — not a tactical experiment.</p>
+
+<a href="mailto:logistics@emirg-group.com?subject=Strategic%20AI%20Engagement%20-%20EMIRG%20AI" class="cta-btn">
+Initiate Strategic Engagement →
+</a>
+
 </div>
 </section>
 
 <footer>
-<p>© 2026 YourAI Consultancy. All rights reserved.</p>
+<div class="container">
+<p>© 2026 EMIRG AI. All rights reserved.</p>
+</div>
 </footer>
 
 </body>
